# alibabacloud-adb-mysql-mcp-server

./: .gitignore  Dockerfile  README.md  README_zh.md  pyproject.toml  smithery.yaml
skill/: skill_readme.md  skill_readme_cn.md
skill/alibabacloud-adb-mysql-copilot/: SKILL.md  requirements.txt  skill_readme.md  skill_readme_cn.md
skill/alibabacloud-adb-mysql-copilot/references/: cluster-info.md  dimension-table-diagnosis.md  excessive-primary-key-diagnosis.md  index-advice.md  oversize-non-partition-table-diagnosis.md  slow-query-diagnosis.md  sql-inspection.md  table-modeling-diagnosis.md  table-partition-diagnosis.md  table-skew-diagnosis.md  tiering-advice.md
skill/alibabacloud-adb-mysql-copilot/scripts/: call_adb_api.py
skill/alibabacloud-adb-openclaw-insight/: README.md  README_CN.md  SKILL.md  config.example.json  requirements.txt
skill/alibabacloud-adb-openclaw-insight/scripts/: analyze_usage.py  collect_logs.py  config.py  db.py  init_db.py  llm_client.py  main.py  scheduler.py  types.py
skill/alibabacloud-adb-smart-analyst/: README.md  README_CN.md  SKILL.md  examples.md  requirements.txt
skill/alibabacloud-adb-smart-analyst/scripts/: __init__.py  adb_analyst.py  adb_smart_analyst.py  db_connection.py  semantic.py  sql_executor.py  table_metadata.py  utils.py
src/adb_mysql_mcp_server/: db_service.py  openapi_client.py  server.py  utils.py
src/adb_mysql_mcp_server/core/: context.py  mcp.py
test/: conftest.py  test.env  test_core_mcp.py  test_db_service.py  test_integration.py  test_openapi_client.py  test_server.py  test_utils.py
(+4 files in other folders)
