[project]
name = "adb-mysql-mcp-server"
version = "2.0.0"
description = "MCP server for AnalyticDB MySQL via OpenAPI and direct SQL connection"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "lipandong", email = "pandong.lpd@alibaba-inc.com" }
]
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.8.0",
    "pymysql>=1.1.1",
    "alibabacloud-adb20211201>=3.7.0",
    "alibabacloud-tea-openapi>=0.3.0",
    "alibabacloud-tea-util>=0.3.0",
    "anyio>=4.0",
    "uvicorn>=0.30.0",
]

[project.urls]
Homepage = "https://github.com/aliyun/alibabacloud-adb-mysql-mcp-server"
Source = "https://github.com/aliyun/alibabacloud-adb-mysql-mcp-server.git"

[project.scripts]
adb-mysql-mcp-server = "adb_mysql_mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/adb_mysql_mcp_server"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
